[package]
name = "atag_one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# csv = "1.1.6"
reqwest = { version = "0.11", features = ["json"], default-features = false}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
# sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls" ] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"]}